# sphinx-dataclass-issue

./: pyproject.toml
dataclassissue/: __init__.py
docs/source/: conf.py  index.rst
