[tool.poetry]
name = "dataclassissue"
version = "0.1.0"
description = ""
authors = ["Cilyan Olowen <gaknar@gmail.com>"]
include = ["docs"]
exclude = ["docs/build"]

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
